# SimpleWorldBuilder

./: ''  .clang  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Compile.bat  CompileBuild.bat  CompileEditor.bat  README.md  imgui.ini
.cache/clangd/index/: Application.cpp.111EBBF95E37D835.idx  Application.hpp.3F481A01181FBCCB.idx  Core.hpp.0AA8515BB20FE52F.idx  EntryPoint.cpp.F2E35DD9923CC2AC.idx  Log.cpp.969E41B8A638FFD4.idx  Log.hpp.1CACC151769E9215.idx
DefaultRessources/SandboxGame/: SandboxGame.proj  metaList.save  packageList.pcklst  settings.settings
DefaultRessources/SandboxGame/assets/: mat0.mat  new Material.mat  sample.scene  sampleTest.scene
DefaultRessources/SandboxGame/assets/Models/: monkey.fbx
DefaultRessources/SandboxGame/assets/Shaders/: FragmentShader.glsl  VertexShader.glsl
DefaultRessources/assets/: EngineEditorAssetList.config
DefaultRessources/assets/Shaders/: FragmentShader.glsl  VertexShader.glsl
WorldBuilder/: SimpleWorldBuilder.cmake
WorldBuilder/src/: EntryPoint.cpp  WorldBuilder.hpp  WorldBuilderEditor.hpp
WorldBuilder/src/Core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.cpp  LayerStack.cpp  LayerStack.hpp  Project.hpp
WorldBuilder/src/Core/AssetManager/: Asset.hpp  AssetManagerBase.cpp  AssetManagerBase.hpp  EditorAssetManager.cpp  EditorAssetManager.hpp  RuntimeAssetManager.cpp  RuntimeAssetManager.hpp
WorldBuilder/src/Core/Commons/: Camera.cpp  Camera.hpp  Scene.cpp  Scene.hpp  SceneManagement.cpp  SceneManagement.hpp  Timestep.cpp  Timestep.hpp
WorldBuilder/src/Core/ECS/: EcsComponent.hpp  Entity.hpp  LightComponent.hpp  TransformComponent.hpp
WorldBuilder/src/Core/Editor/: CommandLineBarLayer.cpp  CommandLineBarLayer.hpp  EditorShortCutInputManager.hpp  EditorShortcutInputManager.cpp  ImGuiAdditionals.cpp  ImGuiAdditionals.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  MainMenuBarLayer.cpp  MainMenuBarLayer.hpp  ViewportLayer.cpp  ViewportLayer.hpp
WorldBuilder/src/Core/Event/: Event.cpp  Event.hpp  WindowEvent.hpp
WorldBuilder/src/Core/Input/: Input.cpp  Input.hpp  InputData.hpp  Keycode.hpp
WorldBuilder/src/Core/Log/: Log.cpp  Log.hpp
WorldBuilder/src/Core/Renderer/: Buffer.cpp  Buffer.hpp  CubeMap.cpp  CubeMap.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer3D.cpp  Renderer3D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  Vertex.cpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
WorldBuilder/src/Core/Serializer/: AssetManagerSerializer.cpp  AssetManagerSerializer.hpp  MaterialSerializer.cpp  MaterialSerializer.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp  ScenePackageSerializer.cpp  ScenePackageSerializer.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Serializer.cpp  Serializer.hpp
WorldBuilder/src/Core/Utils/: FileSystem.cpp  FileSystem.hpp
WorldBuilder/src/Core/Window/: Window.cpp  Window.hpp
WorldBuilder/vendors/GLFW/: GLFW.cmake
WorldBuilder/vendors/ImGuizmo/: ImGuizmo.cmake
WorldBuilder/vendors/assimp/: assimp.cmake
WorldBuilder/vendors/glad/: glad.cmake
WorldBuilder/vendors/glm/: glm.cmake
WorldBuilder/vendors/imgui/: imgui.cmake
WorldBuilder/vendors/stb/: stb.cmake
WorldBuilderEditor/: WorldBuilderEditor.cmake
WorldBuilderEditor/NewProject/: NewProject.proj
WorldBuilderEditor/assets/: FragmentShader.glsl  VertexShader.glsl  cube.fbx
WorldBuilderEditor/src/: Editor.cpp  Editor.hpp
WorldBuilderEditor/src/UIEditor/: CommandLineBarLayer.cpp  CommandLineBarLayer.hpp  EditorShortCutInputManager.hpp  EditorShortcutInputManager.cpp  GuizmoEditor.cpp  GuizmoEditor.hpp  ImGuiAdditionals.cpp  ImGuiAdditionals.hpp  MainMenuBarLayer.cpp  MainMenuBarLayer.hpp  ViewportLayer.cpp  ViewportLayer.hpp
WorldBuilderGame/: WorldBuilderGame.cmake
WorldBuilderGame/assets/: VertexShader.glsl
WorldBuilderGame/src/: Game.cpp
folderPath/testProject/: testProject.proj
(+61 files in other folders)
